--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -66,10 +66,7 @@
 }
 
 .product-container {
-  padding-top: 40px;
-  padding-bottom: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 40px 25px 25px 25px;
 
   border-right: 1px solid rgb(231, 231, 231);
   border-bottom: 1px solid rgb(231, 231, 231);
@@ -98,6 +95,7 @@
 .product-name {
   height: 40px;
   margin-bottom: 5px;
+  color: black;
 }
 
 .product-rating-container {
@@ -120,10 +118,18 @@
 .product-price {
   font-weight: 700;
   margin-bottom: 10px;
+  color: black;
 }
 
 .product-quantity-container {
   margin-bottom: 17px;
+}
+.quantity-selector{
+  color: rgb(240, 136, 4);
+  border-color: wheat;
+}
+.product-quantity-container :hover {
+  border-color: rgb(240, 136, 4);
 }
 
 .product-spacer {
@@ -153,6 +159,7 @@
   width: 100%;
   padding: 8px;
   border-radius: 50px;
+  color: black;
 }
 .added-to-cart-visible {
   opacity: 1;
