--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -115,6 +115,36 @@
   margin-left: 3px;
 }
 
+.quantity-input{
+  width: 36px;
+  display: none;
+  border: 1px solid orangered ;
+  border-radius: 5px;
+  padding-left: 4px;
+  color: black;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.save-quantity-link{
+  display: none;
+}
+
+.is-editing-quantity .quantity-input{
+  display: initial;
+}
+.is-editing-quantity .save-quantity-link{
+  display: initial;
+}
+
+.is-editing-quantity .quantity-label{
+  display: none;
+}
+
+.is-editing-quantity .update-quantity-link{
+  display: none;
+}
+
 @media (max-width: 1000px) {
   .delivery-options {
     /* grid-column: 1 means this element will be placed
